# PointCloud-Skeletonization

./: .gitignore  OneCorn.ply  OneCornAfter.ply  README.md  README_old.md  oneCorn.View  oneCorn.skel
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/: CMakeLists.txt  Console.cpp  Console.h  DataMgr.h  GLArea.h  GLDrawer.cpp  GlobalFunction.h  ParameterMgr.cpp  Point Cloud.vcxproj.filters  WLOP.cpp  calculationthread.cpp  calculationthread.h  compile_commands.json  main.cpp  mainwindow.h  trackmode.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/Algorithm/: NormalSmoother.cpp  PointCloudAlgorithm.h  Skeleton.cpp  Skeleton.h  Upsampler.cpp  Upsampler.h  WLOP.cpp  anistropicPCA_Normal.h  normal_extrapolation.h
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/Debug/: CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.read.1.tlog  mt.command.1.tlog  mt.write.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/GeneratedFiles/: ui_mainwindow.h  ui_para_skeletonization.h  ui_para_wlop.h  ui_upsampling_para.h
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/GeneratedFiles/Debug/: moc_dlg_normal_para.cpp  moc_std_para_dlg.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/GeneratedFiles/Release/: moc_calculationthread.cpp  moc_dlg_skeleton_para.cpp  moc_dlg_upsampling_para.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/ann2fig/: ann2fig.vcxproj
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/dll/: dll.vcxproj  dll.vcxproj.filters
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/dll/Debug/: ANN.exp  ANN.lib  cl.command.1.tlog  dll.write.1.tlog  link.write.1.tlog  mt.dep  mt.read.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/dll/Release/: dll.write.1.tlog  link.read.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/sample/: sample.vcxproj
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/sample/Debug/: BuildLog.htm  CL.read.1.tlog  link.command.1.tlog  link.write.1.tlog  mt.command.1.tlog  rc.read.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/sample/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  mt.write.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/ann_1.1.2/MS_Win64/test/Debug/: CL.read.1.tlog  link.read.1.tlog  mt.read.1.tlog  (+1 more)
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/glut/: freeglut.lib
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/glut/Release/: LIBPNG1.LIB
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/IncludeLib/vcglib/wrap/qt/: gl_label.h  shot_qt.h
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/Release/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.read.1.tlog  mt.write.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/UI/: dlg_normal_para.cpp  dlg_skeleton_para.cpp  dlg_upsampling_para.h  dlg_wlop_para.h  normal_para.ui  para_wlop.ui  std_para_dlg.cpp  std_para_dlg.h
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/: ;  CMesh.h  Console.cpp  DataMgr.cpp  DataMgr.h  GLArea.cpp  GLArea.h  GlobalFunction.cpp  GlobalFunction.h  Parameter.h  ParameterMgr.cpp  ParameterMgr.h  Point Cloud.vcxproj  WLOP.h  \  default.ply  glarea.h  grid.cpp  main.cpp  mainwindow.cpp  mainwindow.h  trackball.cpp  trackmode.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/Algorithm/: Skeleton.h  Skeletonization.cpp  Skeletonization.h  WLOP.h  anistropicPCA_Normal.h
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/Backup_GeneratedFiles/: ui_normal_para.h
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/Backup_GeneratedFiles/Debug/: moc_dlg_upsampling_para.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/Backup_GeneratedFiles/Release/: moc_dlg_normal_para.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/Debug/: Point Cloud.lastbuildstate  cl.command.1.tlog  link.write.1.tlog  mt.read.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/GeneratedFiles/: qrc_mainwindow.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/GeneratedFiles/Debug/: moc_GLArea.cpp  moc_calculationthread.cpp  moc_dlg_skeleton_para.cpp  moc_mainwindow.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/GeneratedFiles/Release/: moc_GLArea.cpp  moc_dlg_wlop_para.cpp  moc_std_para_dlg.cpp
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/IncludeLib/ann_1.1.2/MS_Win64/: Ann.ncb
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/IncludeLib/glut/Release/: GLU32.LIB
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/IncludeLib/glut64/lib/: glew32.lib
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/Release/: CL.write.1.tlog  PointCloud.lastbuildstate  custombuild.command.1.tlog  mt.command.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/UI/: dlg_normal_para.cpp  dlg_normal_para.h  dlg_skeleton_para.cpp  dlg_skeleton_para.h  dlg_upsampling_para.cpp  dlg_upsampling_para.h  dlg_wlop_para.cpp  para_skeletonization(back).ui  para_skeletonization.ui
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/src/x64/Debug/: CL.write.1.tlog  custombuild.read.1.tlog
Point-Cloud_Procesing_1_0/point_cloud_1_0_source_code/Point Cloud/x64/Debug/: Point Cloud.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog
(+139 files in other folders)
